await frames patch over 2.9, withou custom events

--- a/src/res/flame.html
+++ b/src/res/flame.html
@@ -57,6 +57,7 @@
 		[0xc8c83c, 30, 30, 10],
 		[0xe17d00, 30, 30,  0],
 		[0xcce880, 20, 20, 20],
+		[0x7c9fdd,  0, 10, 10]
 	];
 
 	function getColor(p) {
